# mhri_intent

./: .gitignore  LICENSE  README.md  pyproject.toml
client/: end_page.html  game.html  index.html  likert_page.html  preface.html
scripts/: mcts.py  shortest_path_heuristic.py  user_logs_visualizer.py
scripts/config/: mcts.yaml
server/: 1p_websockets_server.py
server/config/: server.yaml
src/mhri/algos/: mcts_intent.py  shortest_path.py  transition_belief.py
src/mhri/envs/: __init__.py  comm_signal.py  gnomes_at_night.py
src/mhri/envs/maze_layouts/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  diagonals.json  human.json  quadrants.json  swap_maze.py
src/mhri/utils/: canvas_parser.py  renderer.py
